--- a/.github/workflows/MusicDBBuildOnly.yaml
+++ b/.github/workflows/MusicDBBuildOnly.yaml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - main
+      - 'Carlos/VisualStudioExperiment'
     paths:
       - 'MusicDB/**'
       - '.github/workflows/**'
