Typos are going to be the death of me

--- a/.github/workflows/MusicDBBuildOnly.yaml
+++ b/.github/workflows/MusicDBBuildOnly.yaml
@@ -96,7 +96,7 @@ jobs:
           az sql server firewall-rule create `
             --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} `
             --server ${{ secrets.AZURE_SQL_SERVER_NAME }} `
-            --name "$ruleName"
+            --name "$ruleName" `
             --start-ip-address "$ip" `
             --end-ip-address "$ip"
 
