--- a/.github/workflows/MusicDB_BuildDeploy.yaml
+++ b/.github/workflows/MusicDB_BuildDeploy.yaml
@@ -5,7 +5,8 @@ on:
     branches:
       - main
     paths-ignore:
-      - '.github/workflows/**'
+      - '.github/**'
+      - 'MusicDB_ETL/**'
 
 jobs:
   build-and-validate:
